@startuml
class Buch {
  - titel : String
  - autor : String
  - hatFortsetzung : boolean
  - genre : String
  - bewertung : int
  + Buch(titel, autor, hatFortsetzung, genre, bewertung)
  + getTitel() : String
  + getGenre() : String
  + getBewertung() : int
  + toString() : String
}

class BuecherEingabe {
  - buchListe : ArrayList<Buch>
  + BuecherEingabe()
  + getBuchListe() : ArrayList<Buch>
  + main(args : String[])
}

class BuecherAusgabe {
  - buchListe : ArrayList<Buch>
  - gefilterteListe : ArrayList<Buch>
  + BuecherAusgabe(buchListe : ArrayList<Buch>)
  + zeigeListeAn(filter : String)
  + filterIstAktiv() : boolean
}

BuecherEingabe "1" --> "*" Buch : erstellt / verwaltet
BuecherAusgabe "1" --> "*" Buch : zeigt an
BuecherEingabe ..> BuecherAusgabe : öffnet Fenster

@enduml